# air-quality

./: .gitignore  Cargo.toml  Dockerfile  README.md  airquality.service  docker-compose.yml  node.sh  run.sh
.github/workflows/: rust.yml
airquality-web/: package-lock.json  package.json
assets/: airquality.service  install.sh
config/: up.sql
src/: Cargo.toml  Dockerfile  airquality.service  docker-compose.yml  main.rs  rebuild.sh  run.sh
src/alerts/: alerts.rs
src/emailer/: emailer.rs  mod.rs
src/entities/: airquality.rs  contact.rs  login.rs  mod.rs  sub.rs  websessions.rs
src/fairings/: apikey_fairing.rs  cookie_fairing.rs  mod.rs  sessionkey_fairing.rs
src/manage_airquality/: airquality_funcs.rs  mod.rs
src/manage_contact/: contact_funcs.rs  mod.rs
src/manage_cookies/: cookie_funcs.rs  mod.rs
src/manage_sessions/: session_funcs.rs
src/manage_sub/: mod.rs  sub_funcs.rs
